--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -1,10 +1,30 @@
-name: Deploy React to AWS
+name: Deploy React app to AWS using CI/CD
+
 on:
   push:
     branches:
-      - "Docker-compose-CI/CD-AWS-Beanstalk"
+      - main
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build Docker image
+      run: docker build -t kanna7/myreactapp:new .
+
+    - name: Push Docker image
+      run: docker push kanna7/myreactapp:new
+
   deploy:
     runs-on: ubuntu-latest
     steps:
