--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -40,8 +40,8 @@ jobs:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: myreactapp
-          environment_name: Myreactapp-env-1
+          environment_name: Myreactapp-env 
           version_label: ${{ github.sha }}
-          existing_bucket_name: elasticbeanstalk-us-east-1-577681530841
+          existing_bucket_name: elasticbeanstalk-us-east-1-865258382925
           region: us-east-1
           deployment_package: deploy.zip
